--- a/index.html
+++ b/index.html
@@ -1,46 +1,26 @@
-<!DOCTYPE html>
+<DOCTYPE html>
 <html>
 <head>
-<title>different tecnologies</title>
-</head>
-<body>
-<h1>Full Stack Tecnologies </h1>
-<p>A full stack application is a software solution that includes both from the
- front-end and back-end components can build,manage,and deploy the entire
- application from the user interface to database management 
+<tile></title>
 
 <body>
-<h2>HTML</h2>
-<p>HTML (HyperText Markup Language) is the standard language used to create and design webpages and web applications.
-
-It structures the content on the web by defining elements such as text, images, links, forms, and multimedia.
-
-HTML uses a system of tags (elements) to specify how content is organized and displayed in a browser.
-
- </p>
-<h2>CSS</h2>
-<p>CSS (Cascading Style Sheets) is a language used to describe the presentation and layout of a webpage.
-
-While HTML provides the structure and content of a webpage, CSS controls how that content looks, including aspects such as colors, fonts, spacing, positioning, and overall layout.
-
- </p>
- </p>
-<h2>PYTHON</h2>
-<p>Python is a high-level, general-purpose programming language known for its simplicity and readability. It was created by Guido van Rossum and first released in 1991. Python is widely used in various fields, including web development, data science, machine learning, automation, and more.</p> 
-<h2>Javascript</h2>
-Java is a high-level, object-oriented programming language that was first released by Sun Microsystems in 1995 (now owned by Oracle). It is designed to be platform-independent, meaning that Java code can run on any device or operating system that has a Java Virtual Machine (JVM) installed.</p>
-<h2>NODE JS</h2>
-<p>Node.js is a runtime environment that allows you to run JavaScript on the server side. It was created by Ryan Dahl in 2009 and is built on the V8 JavaScript engine, which is the same engine used by Google Chrome.
-
-Node.js enables developers to use JavaScript for both client-side (browser) and server-side (backend) programming, making it possible to use a single language for the entire application stack.
-
- </p>
-<h2>REACT JS</h2>
-<p>React.js (often referred to simply as React) is a JavaScript library used for building user interfaces (UIs) for web applications.
-
-It was developed by Facebook and released in 2013. React makes it easier to create interactive, dynamic, and complex UIs by breaking down the interface into reusable components. <p>
-
-
- 
-</body>
-</html> 
+<table border="2" cellpadding="10px" cellspacing="20px" width="100%px" height="10%px" bgcolor="lightblue">
+<tr>
+<th>students id</th>
+<th>students names</th>
+<th>city</th>
+</tr>
+<tr>
+<td >07</td>
+<td>jhon</td>
+<td>newyork</td>
+</tr>
+<tr>
+<td>09</td>
+<td>venky</td>
+<td>america</td>
+</tr>
+<tr>
+<td>06</td>
+<td>badri</td>
+<td>london</td>
