--- a/htmlproject/index.html
+++ b/htmlproject/index.html
@@ -225,7 +225,7 @@ button:hover{
     width: 100%;
 }
 .container6 .el1 h2{
-    font-size: 4rem;
+    font-size: 2rem;
 }
 
 .el1{
@@ -234,11 +234,13 @@ button:hover{
 .el2{
     justify-items: center;
     width: 50vw;
-    height: 50vh;
+    height: 60vh;
     background: rgb(71, 152, 184);
     border-radius: 10px;
+    font-size: 4re;
 }
-.container6.el2 h2{
+.container6 h2{
+   
     background: white;
   
   
@@ -247,7 +249,7 @@ button:hover{
 
 .el2 input{
     
-    justify-content: center;
+text-align: center;
     width: 23vw;
     height: 8vh;
     background: white;
@@ -262,6 +264,7 @@ button:hover{
     padding-top: 20px;
 
 }
+
 .container6 .v1{
 
   
@@ -382,7 +385,7 @@ font-size: 4rem;
 
 
 .container12 img{
-    width: 30vw;
+    width: 25vw;
     height: 40vh;
 }
 .container12 h2{
@@ -436,7 +439,7 @@ font-size: 4rem;
     width: 25%;
     height: 5vh;
     
-   
+  
 }
 
 
@@ -471,6 +474,8 @@ i{
 .container14 .b1{
     margin: 10px;
     width: 20vw;
+    height: 10vh;
+    align-items: center;
     border-radius: 10px;
     color: black;
     background: whitesmoke;
@@ -494,10 +499,10 @@ i{
 
 .container15{
     background: rgb(23, 143, 235);
-    height: 20vh;
+    height: 30vh;
 }
 .container15 p{
-    padding-top: 30px;
+    padding-top: 100px;
 }
 
 
